# sandbox

./: aliases.sh
catkin_ws/src/depth_scene_rendering/: CMakeLists.txt  CMakeLists.txt.noROS  README  package.xml  run.sh  setup.py
catkin_ws/src/depth_scene_rendering/config/: cam_config_path.txt  intrinsics_path.txt  noisy_scenes.txt  objects.yaml  scenes.txt  scenes.yaml  scenes_noisy.txt  scenes_noisy.yaml  scenes_noisy_2018-10-19.yaml  scenes_noisy_2018-11-07.yaml  scenes_noisy_2018-11-07_09_11_13_17_18_120perObj.yaml  scenes_noisy_2018-11-07_09_11_60perObj.yaml  scenes_noisy_2018-11-07_09_30perObj.yaml  scenes_noisy_2018-11-07_10perObj.yaml  scenes_noisy_2018-11-09_20perObj.yaml  scenes_noisy_2018-11-11_30operObj.yaml  scenes_noisy_2018-11-11_30perObj.yaml  scenes_noisy_2018-11-13_10perObj.yaml  scenes_noisy_2018-11-17_10perObj.yaml  scenes_noisy_2018-11-17_1_10perObj.yaml  scenes_noisy_2018-11-17_2_10perObj.yaml  scenes_noisy_2018-11-18_1_10perObj.yaml  scenes_noisy_2018-11-18_2_10perObj.yaml  scenes_noisy_2018-11-18_3_10perObj.yaml  scenes_noisy_2018-11-18_3_seleted.yaml  scenes_noisy_2018-18-11-07_09_11_13_17_18_120perObj.yaml  scenes_noisy_2perObj.yaml  scenes_noisy_canonical.yaml  scenes_test.txt
catkin_ws/src/depth_scene_rendering/include/depth_scene_rendering/: camera_info.h  compensate_frames.h  depth_to_image.h  postprocess_scenes.h  scene_yaml.h
catkin_ws/src/depth_scene_rendering/scenes/: cam_depth_range.txt  intrinsics.txt
catkin_ws/src/depth_scene_rendering/src/: blender_add_py_paths.py  config_consts.py  config_objects.py  config_paths.py  crop_images.py  inspect_images.py  inspect_point_cloud.cpp  output_labels.py  postprocess_scenes.cpp  postprocess_scenes.py  render_camera_poses.py  scan_kinect.py  scene_generation.py
catkin_ws/src/depth_scene_rendering/src/depth_scene_rendering/: config_read_yaml.py  load_extrinsics.py
catkin_ws/src/grasp_collection/: CMakeLists.txt  README  package.xml  setup.py
catkin_ws/src/grasp_collection/src/: batch_grasp_collect.sh  config_consts.py  config_paths.py  grasp_antipodal_collect.py  grasp_collect.py  grasp_collection.py  grasp_concat.py  grasp_io.py  grasp_pose_extract.py  grasp_replay.py  graspit_dofs_move.py  visualize_contacts.py
catkin_ws/src/grasp_collection/src/grasp_collection/: config_consts.py  config_paths.py  grasp_io.py
catkin_ws/src/grasp_drop_test/: CMakeLists.txt  package.xml
catkin_ws/src/grasp_drop_test/launch/: drop_test.launch  object_world.launch  spawn_robotiq.launch
catkin_ws/src/grasp_drop_test/sdf/: stock_dae.sdf
catkin_ws/src/grasp_drop_test/src/: config_consts.py  config_paths.py  drop_test.py  robotiq_frames.py
catkin_ws/src/grasp_drop_test/worlds/: object.world
catkin_ws/src/graspit_commander_custom/: CMakeLists.txt  package.xml  setup.py
catkin_ws/src/graspit_commander_custom/src/graspit_commander_custom/: graspit_commander_custom.py
catkin_ws/src/graspit_custom/src/EGPlanner/: egPlanner.cpp  simAnnPlanner.cpp
catkin_ws/src/graspit_interface_custom/: CMakeLists.txt  package.xml
catkin_ws/src/graspit_interface_custom/action/: PlanGrasps.action
catkin_ws/src/graspit_interface_custom/include/graspit_interface_custom/: graspit_interface.h
catkin_ws/src/graspit_interface_custom/launch/: graspit_interface.launch
catkin_ws/src/graspit_interface_custom/scripts/: launch_graspit.sh
catkin_ws/src/graspit_interface_custom/src/: graspit_interface.cpp  main.cpp
catkin_ws/src/graspit_interface_custom/srv/: SetCameraPose.srv
catkin_ws/src/robotiq_control/: CMakeLists.txt  README  package.xml  setup.py
catkin_ws/src/robotiq_custom/robotiq_hand_description/: CMakeLists.txt  README  package.xml
catkin_ws/src/robotiq_custom/robotiq_hand_description/robots/: gen_sdf.sh  robotiq_hand_description_wplugin_teleport.ref.sdf  robotiq_hand_description_wplugin_teleport.urdf.xacro
catkin_ws/src/robotiq_custom/robotiq_hand_description/urdf/: robotiq_hand_wtactile.gazebo
catkin_ws/src/robotiq_custom/robotiq_s_model_articulated_gazebo_plugins/: CMakeLists.txt  package.xml
catkin_ws/src/robotiq_custom/robotiq_s_model_articulated_gazebo_plugins/include/robotiq_s_model_articulated_gazebo_plugins/: RobotiqHandPlugin_teleport.h  contact_sensor_plugin.h
catkin_ws/src/robotiq_custom/robotiq_s_model_articulated_gazebo_plugins/src/: RobotiqHandPlugin_teleport.cpp  contact_sensor_plugin.cpp  sim_takktile_node.py
catkin_ws/src/tactile_graspit_collection/: CMakeLists.txt  README  package.xml
catkin_ws/src/tactile_graspit_collection/src/: config_paths.py  depth_to_image.py  inspect_channels.py  occlusion_test.cpp  visualize_heatmaps.py
catkin_ws/src/tactile_occlusion_heatmaps/: CMakeLists.txt  README  package.xml  setup.py
catkin_ws/src/tactile_occlusion_heatmaps/config/: contacts.yaml  paths.yaml
catkin_ws/src/tactile_occlusion_heatmaps/launch/: occlusion_test.launch  visualize_grasps_and_heatmaps.launch
catkin_ws/src/tactile_occlusion_heatmaps/src/: config_paths.py  contacts_io.cpp  depth_to_image.py  inspect_channels.py  labels_io.py  occlusion_test.cpp  plot_per_class_errors.py  png_to_npz.py  visualize_heatmaps.py
(+40 files in other folders)
