<?xml version="1.0"?>
<package>
  <name>robotiq_hand_description</name>
  <version>0.0.1</version>
  <description>
    This package contains RobotiQ hand description files.
  </description>
  <maintainer email="caguero@osrfoundation.org">Carlos Agüero</maintainer>
  <author email="caguero@osrfoundation.org">Carlos Agüero and Shaun Edwards</author>
  <license>Apache 2.0</license>
  <url type="website">http://gazebosim.org/wiki/DRC</url>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>xacro</run_depend>

  <!-- Mabel Zhang 25 Jan 2018 for gravity compensation plugin to load model of robotiq -->
  <export>
    <!-- Ref http://answers.gazebosim.org/question/6568/uri-paths-to-packages-in-the-sdf-model-file/
         gazebo_model_path="${prefix}/.." adds the parent dir of the package to
           Gazebo model path, which should usually be the catkin_ws/src directory.
           So then you can reference all your packages from this workspace.
      -->
    <gazebo_ros gazebo_plugin_path="${prefix}/lib" gazebo_model_path="${prefix}/.." />
  </export>

</package>
